deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airbnb
  labels:
    name: airbnb
    environment: development
